--- a/drivers/Kconfig
+++ b/drivers/Kconfig
@@ -2,7 +2,7 @@
 menu "Device Drivers"
 
 # Keep I/O buses first
-
+source "drivers/audio-over-ether/Kconfig"
 source "drivers/amba/Kconfig"
 source "drivers/eisa/Kconfig"
 source "drivers/pci/Kconfig"
